kubernetes/example/workshop/whoami-service-clusterip.yml
#apiVersion: apps/v1beta2
#kind: Deployment
#metadata:
#  name: redis
#spec:
#  selector:
#    matchLabels:
#      type: db
#      service: redis
#  template:
#    metadata:
#      labels:
#        type: db
#        service: redis
#    spec:
#      containers:
#      - name: redis
#        image: redis
#        ports:
#        - containerPort: 6379
#          protocol: TCP
#---

apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    type: db
    service: redis
