kubernetes/example/workshop/whoami-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-np
spec:
  type: NodePort
  ports:
  - port: 6379
    protocol: TCP
  selector:
    type: db
    service: redis
